--- a/crossplane.yaml
+++ b/crossplane.yaml
@@ -13,4 +13,7 @@ metadata:
       entirely from scratch.
 spec:
   crossplane:
-    version: ">=v1.7.0-0"
+    version: ">=v1.14.1-0"
+  dependsOn:
+    - provider: xpkg.upbound.io/upbound/platform-ref-aws-cnoe
+      version: v0.1.0
