--- a/.up/examples/cnoe.yaml
+++ b/.up/examples/cnoe.yaml
@@ -7,7 +7,7 @@ spec:
   compositeDeletePolicy: Foreground
   parameters:
     id: platform-ref-aws-cnoe
-    region: us-west-2
+    region: eu-central-1
     version: "1.27"
     route53zoneId: Z0115025YFQ7ZQF6BJ6N
     iam:
